--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="content-section" class="hidden">
             <div class="scroll-area">
                 <div class="photo-messages">
-                    <img src="images/name.jpg" alt=""/>
+                    <img src="name.jpg" alt=""/>
                     <p>Remember!!!!...jb aapne pahalli baar khud ko meri wife ke jase accept kiya tha and meri last name aapne name ke aage likhi vo din yrrrr kuch bhi hooo aapp sath rahanaa hum real me bhi recreat karenge uskooo for sure</p>
                 </div>
                 <div class="voice-message">
@@ -62,4 +62,5 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
